--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.2.4'
     id 'io.spring.dependency-management' version '1.1.4'
     id 'org.openjfx.javafxplugin' version '0.1.0'
+    id 'com.avast.gradle.docker-compose' version '0.17.6'
 }
 
 group = 'com.solacecare'
@@ -25,6 +26,12 @@ dependencies {
 javafx {
     version = '17'
     modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+dockerCompose {
+    useComposeFiles = ['docker-compose.yml']
+    removeVolumes = false
+    isRequiredBy(tasks.bootRun)
 }
 
 tasks.named('test') {
